feat: enhance project management with exception Handling